flickering fix

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -17,3 +17,15 @@
   font-weight: 500;
   text-align: center;
 }
+
+.help-title {
+  color: #3f72af;
+  display: none;
+  text-align: center;
+}
+
+@media only screen and (max-width: 500px) {
+  .help-title {
+    display: flex;
+  }
+}
