--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -62,6 +62,7 @@
 }
 
 .nav-button {
+  background-color: #fff;
   border: none;
   color: #00a0f6;
   transition: margin .3s;
@@ -130,6 +131,7 @@
   display: inline-block;
   padding-left: 20px;
   text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
   width: 100%;
 }
 
@@ -142,6 +144,7 @@
 .sidenav-button-clicked a {
   color: #f9f7f7;
   text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .sidenav-button-wrapper {
